--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -2587,6 +2587,8 @@
                     else {
 
                         document.getElementById('noTransport').classList.remove('hidden');
+                        document.getElementById('transportCard').classList.add('hidden');
+                        document.getElementById('transportCompany').value = null;
 
                     }
                     return;
